syntax = "proto3";

package testing.resourcenames;

import "google/api/annotations.proto";

service ResourceNames {
  option (google.api.default_host) = "resourcenames.example.com";

  // Test top-level resource definition.
  rpc SimpleMethod(SimpleResource) returns(Response) {
    option (google.api.method_signature) = { fields: ["name"] };
  }

  // Test resource definition inlined in the proto message.
  rpc SimpleInlineMethod(SimpleInlineResource) returns(Response) {
    option (google.api.method_signature) = { fields: ["name"] };
  }

  // Test repeated resource.
  rpc SimpleRepeatedMethod(SimpleRepeatedResource) returns(Response) {
    option (google.api.method_signature) = { fields: ["names"] };
  }

  // Test wilcard resource.
  rpc WildcardMethod(WildcardResource) returns(Response) {
    option (google.api.method_signature) = { fields: ["name", "names", "required_single", "required_repeated"] };
  }

  // Test multiple cases of resoure-names.
  // All combinations of optional/required and single/repeated.
  // Using field names that are not "name" or "names".
  rpc MultiCaseMethod(MultiCaseRequest) returns (Response) {
    option (google.api.method_signature) = {
	  fields: ["optional_single", "optional_repeated", "required_single", "required_repeated"] };
  }
}

option (google.api.resource_definition) = {
  name: "SimpleResource",
  path: "items/{item_id}"
};

message SimpleResource {
  string name = 1 [(google.api.resource_reference) = "SimpleResource"];
}

message SimpleInlineResource {
  string name = 1 [(google.api.resource).path = "items1/{item1_id}/items2/{item2_id}"];
}

message SimpleRepeatedResource {
  repeated string names = 1 [(google.api.resource_reference) = "SimpleResource"];
}

option (google.api.resource_definition) = {
  name: "WildcardResource",
  path: "*"
};

message WildcardResource {
  string name = 1 [(google.api.resource_reference) = "WildcardResource"];
  repeated string names = 2 [(google.api.resource_reference) = "WildcardResource"];
  string required_single = 3 [(google.api.resource_reference) = "WildcardResource", (google.api.field_behavior) = REQUIRED];
  repeated string required_repeated = 4 [(google.api.resource_reference) = "WildcardResource", (google.api.field_behavior) = REQUIRED];
}

message MultiCaseRequest {
  string optional_single = 1 [(google.api.resource_reference) = "SimpleResource"];
  repeated string optional_repeated = 2 [(google.api.resource_reference) = "SimpleResource"];
  string required_single = 3 [(google.api.resource_reference) = "SimpleResource", (google.api.field_behavior) = REQUIRED];
  repeated string required_repeated = 4 [(google.api.resource_reference) = "SimpleResource", (google.api.field_behavior) = REQUIRED];
}

message Response {
}
